mule-user-guide/v/3.6/microsoft-sharepoint-2010-connector.adoc
=  Microsoft SharePoint 2010连接器
:keywords: anypoint studio, connector, endpoint, microsoft, sharepoint, share point, intranet


*Release Notes:* link:/release-notes/microsoft-sharepoint-2010-connector-release-notes[Microsoft SharePoint 2010连接器发行说明]

//缺少示例文本n链接

Microsoft SharePoint是用于内容和文档管理，Intranet门户，协作，外联网，网站和企业搜索的Web应用程序平台。 Anypoint平台的Microsoft SharePoint连接器支持通过其SOAP API与SharePoint 2010集成。

== 支持的操作

* 列表和列表项目API：创建，删除，检索和更新列表和列表项目。
* 文件和文件夹API：创建，删除，检索文件夹。添加，检索内容，检索元数据，删除，签出，撤消签出，签入，发布，取消发布，批准，拒绝和复制文件。

== 在Anypoint Studio中安装SharePoint 2010连接器

. 在Anypoint Studio的*Help*菜单下，选择*Install New Software*。
. 从*Work with*下拉菜单，选择`Anypoint Connectors Update Site`。
. 查找并选择**Microsoft SharePoint 2010 Connector**并点击*Next*。
. 查看您选择的项目的详细信息，然后点击*Next*。
. 选择*I accept the terms of the license agreement*，然后点击*Finish*。
. 点击*Restart Now*完成安装。
.  Studio重新启动后，展开*Connectors*调色板组，查看您最近添加的**Microsoft SharePoint 2010 Connector**。

=== 运行您的第一个流程

==== 第1步：创建一个新的Mule项目

Anypoint Studio启动后，创建一个新项目：

. 从菜单中选择*File*> *New*> *Mule Project*。
. 在*New Mule Project*窗口中，输入**sharepoint2010-demo**作为*Project Name*。
. 点击*Finish*。

==== 第2步：创建和配置新的SharePoint全局元素

配置连接器以连接到SharePoint 2010实例：

. 点击*Global Elements*标签。
. 点击*Create*，弹出*Global Type*对话框。
. 在*Filter*文本框中输入*sha*。
. 选择**Microsoft SharePoint 2010**并点击*OK*。
. 填写所需的参数。详情请参阅连接配置。
. 点击*Test Connection*以确保连接正常工作。
. 连接成功后，点击*OK*。

==== 第3步：创建一个查询SharePoint 2010的流程

创建一个Mule流来查询"Shared Documents"列表。

image:SharepointCanvas.png[SharepointCanvas]

要创建Mule流，请按照下列步骤操作：

. 点击*Message Flow*标签。
. 搜索*http*并将*HTTP*连接器拖动到画布上。这创建了一个新的流程。
. 搜索*sharepoint*并将*HTTP*连接器旁边的**Microsoft SharePoint 2010**拖到**Process **区域。
. 搜索*json*并将*Object to JSON*变压器拖放到**Microsoft SharePoint 2010**旁边。
. 双击*HTTP*连接器。点击*Connector Configuration*列表旁边的**+**。
. 在*HTTP Listener Configuration*窗口中，将*Protocol*设置为*HTTP*，*Host*将**All Interfaces [0.0.0.0] (Default)**和*Port*设置为**8081** 。点击*OK*。
. 在*Basic Settings*下，将*Path*设置为**/query**。
. 双击**Microsoft Dynamics SharePoint 2010**并更新以下配置值：
.. 从*Connector Configuration*列表中选择先前创建的**Microsoft SharePoint 2010**配置。
.. 从*Operation*列表中选择*List Item query*。
.. 从*Language*列表中点击*DataSense Query Language*。
.. 点击**Query Builder…**
.. 从*Types*列表中选择*Shared Documents*。
.. 从*Fields*列表中选择*ID*和*Title*。
.. 从*Order By*列表中选择*Title*。
.. 从*Direction*列表中选择*DESCENDING*。
+
image:SharepointQueryBuilder.png[SharepointQueryBuilder]

. 点击*OK*。

==== 第4步：运行流程

. 在*Package Explorer*中，右键单击**sharepoint2010-demo**，然后选择*Run As*> *Mule Application*。
. 检查控制台以查看应用程序何时启动。如果没有发生错误，您应该看到以下消息：
+
----

++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ Mule is up and kicking (every 5000ms)                    ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++org.mule.module.launcher.StartupSummaryDeploymentListener:***              - - + DOMAIN + - -               * - - + STATUS + - - ** default                                       * DEPLOYED           ** - - + APPLICATION + - -            *       - - + DOMAIN + - -      * - - + STATUS *** sharepoint2010-demo               * default                       * DEPLOYED     **
----

. 打开浏览器并访问`+http://localhost:8081/query+`
. 按文件名降序排列的文档列表应以JSON格式返回（结果因您的SharePoint实例而异）。
+
[source,xml]
----
[{"_ModerationStatus":"0","Editor":{"id":"8","lookUpListName":"User Information List"},"MetaInfo":"vti_parserversion:SR|14.0.0.7015\r\nvti_modifiedby:SR|i:0#.w|mule\\\\muletest\r\nListOneRef:IW|1\r\nvti_folderitemcount:IR|0\r\nvti_foldersubfolderitemcount:IR|0\r\nContentTypeId:SW|0x01010003DD4D13EF6C8446AB329E6FC42FE7BE\r\nvti_title:SW|\r\nvti_author:SR|i:0#.w|mule\\\\muletest\r\n","owshiddenversion":"2","lookUpListName":"Shared Documents","FileLeafRef":"error.txt","UniqueId":"{F0F6C9B9-6942-4866-B254-063EE8B70D59}","_Level":"1","PermMask":"0x7fffffffffffffff","ProgId":"","Last_x0020_Modified":"2015-04-09 16:21:35","Modified":"2015-04-09 16:21:20","DocIcon":"txt","ID":"1","FSObjType":"0","Created_x0020_Date":"2015-04-09 14:57:18","FileRef":"Shared Documents/error.txt"}]
----

== 认证方案

Microsoft SharePoint 2010连接器支持以下身份验证方案：

*  NTLM身份验证
*  Kerberos身份验证
* 基于声明的身份验证

===  NTLM身份验证

image:SharepointNTLMconfig.png[SharepointNTLMconfig]

NTLM身份验证方案具有以下参数：

[%header,cols="2*"]
|===
| {参数{1}}说明
|用户名 |用户进行身份验证。
|密码 |用户使用的密码。
|域 | SharePoint实例的域。
|网站网址 | Microsoft SharePoint网站的路径（`+https://sharepoint.myorganization.com/site+`）。
|禁用Cn检查 |处理HTTPS证书时，如果证书未由可信合作伙伴签名，则服务器可能会发生异常。为了防止这种情况，可以禁用CN（通用名称）检查。 **Note:**这不建议在生产环境中使用。
|===

===  Kerberos身份验证

image:SharepointKerberosConfig.png[SharepointKerberosConfig]

Kerberos身份验证方案具有以下参数：

[%header,cols="2*"]
|===
| {参数{1}}说明
|用户名 |用户进行身份验证。
|密码 |用户使用的密码。
|域 | SharePoint实例的域。
|网站网址 | Microsoft SharePoint网站的路径（`+https://sharepoint.myorganization.com/site+`）。
|禁用Cn检查 |处理HTTPS证书时，如果证书未由可信合作伙伴签名，则服务器可能会响应一个例外。为了防止这种情况，可以禁用CN（通用名称）检查。 **Note:**这不建议在生产环境中使用。
|服务主体名称（SPN） | SPN看起来像主机/ SERVER-NAME.MYREALM.COM
|领域 |用户所属的域。请注意，此值区分大小写，并且必须完全按Active Directory中的定义进行指定。
| KDC  |这通常是域控制器（服务器名称或IP）。
|===

==== 高级Kerberos方案

如果环境很复杂且需要进一步设置，则必须手动创建Kerberos配置文件，并在连接器的连接配置中引用它。

以下参数适用于高级方案：

*  *Login Properties File Path*：自定义登录属性文件的路径。您可以通过定义JAAS登录配置文件来调整Kerberos登录模块（Krb5LoginModule）和特定于场景的配置。未指定时，将设置通常适用于大多数情况的默认值。有两个选项可以设置这个属性：
** 将文件放在类路径中（通常在`src/main/resources`下），并将该属性的值设置为classpath：jaas.conf。
** 按照`C:\kerberos\jaas.conf`提供文件的完整路径。
*  *Kerberos Properties File path*：自定义Kerberos属性文件的路径。有两个选项可以设置这个属性：
** 将文件放在类路径中（通常在`src/main/resources`下），并将该属性的值设置为classpath：krb5.conf。
** 按照`C:\kerberos\krb5.conf`提供文件的完整路径。

====  JAAS登录配置文件

以下是Kerberos登录模块的JAAS登录配置文件示例：

[source,java,linenums]
----
Kerberos {
  com.sun.security.auth.module.Krb5LoginModule required
  debug=true
  refreshKrb5Config=true;
};
----

有关如何为Kerberos登录模块创建JAAS登录配置文件的更多信息，请参阅 link:http://docs.oracle.com/javase/7/docs/jre/api/security/jaas/spec/com/sun/security/auth/module/Krb5LoginModule.html[类Krb5LoginModule]。

====  Kerberos配置文件

以下是Kerberos配置文件内容的示例：

----
[libdefaults]default_realm = MYREALM.COM[realms]MYREALM.COM = { kdc = mydomaincontroller.myrealm.com default_domain = MYREALM.COM}[domain_realm].myrealm.com = MYREALM.COMmyrealm.com = MYREALM.COM
----

*Important*：Realm和default_domain区分大小写，并且必须完全按Active Directory中的定义进行指定。在测试连接期间接收到错误，指出"Message stream modified (41)"表示域名未正确形成。

有关如何创建Kerberos配置文件的更多信息，请参阅 link:http://web.mit.edu/kerberos/krb5-devel/doc/admin/conf_files/krb5_conf.html[MIT Kerberos文档 -  krb5.conf]

=== 基于声明的身份验证

image:SharepointClaimsConfig.png[SharepointClaimsConfig]

基于声明的身份验证方案具有以下参数：

[%header,cols="2*"]
|===
| {参数{1}}说明
|用户名 |用户进行身份验证。
|密码 |用户使用的密码。
|域 | SharePoint实例的域。
|网站网址 | Microsoft SharePoint网站的路径（`+https://sharepoint.myorganization.com/site+`）。
|安全令牌服务URL（STS URL） |接受用户名和密码以验证用户身份并了解WS-Trust 1.3协议的STS端点。当STS是Microsoft的ADFS（Active Directory联合身份验证服务）时，此URL通常为：`+https://youradfs.com/adfs/services/trust/13/usernamemixed+`
|安全令牌服务（STS）应用程序标识符（范围） |此字符串标识STS中的SharePoint网站。它也被称为*Relying Party Identifier*，*Client Identifier*，*Scope*或*Realm*。当STS是Microsoft的ADFS时，可以在AD FS管理控制台中的AD FS>信任关系>依赖方信任>（SharepoinP网站的依赖零件属性）>标识符选项卡中发现此值。
|禁用Cn检查 |处理HTTPS证书时，如果证书未由可信合作伙伴签名，则服务器可能会响应一个例外。为了防止这种情况，可以禁用CN（通用名称）检查。 **Note:**这不建议在生产环境中使用。
|===

*Note*：通过在Web浏览器中打开网站URL，登录到想要访问的SharePoint网站即可获取*Sts App Identifier*。如果为该站点配置了多个身份验证提供程序，则会下拉列出选项。选择所需的STS重定向到STS的登录页面。此时，Web浏览器的地址栏包含一个URL，其中包含以下查询参数`wa=wsignin1.0&wtrealm=uri%3amule%3asp80`。参数*wa*告诉STS登录正在启动。 `wtrealm`包含URL编码的值STS App Identifier。在这个例子中，`uri%3amule%3asp80`是`uri:mule:sp80`。未编码的值是连接器配置的参数。

== 操作

=== 列出和列出项目API

==== 列表创建

根据指定的名称，说明和列表模板ID在当前网站中创建一个列表。

==== 列表获取

返回指定列表的模式。

==== 列出全部

检索所有SharePoint列表。

==== 列表删除

删除指定的列表。

==== 列表更新

根据指定的列表属性更新列表。

==== 列表项目创建

在现有的SharePoint列表中创建一个新项目。

image:SharepointObjectBuilder.png[SharepointObjectBuilder]

==== 列表项删除

从SharePoint列表中删除一个项目。

==== 列出项目更新

从SharePoint列表更新项目。

image:SharepointObjectBuilder.png[SharepointObjectBuilder]

==== 列表项目查询

根据SharePoint列表执行查询并返回符合指定条件的列表项。

除选定的字段外，总是返回以下字段：

*  PermMask
*  _ ModerationStatus：文件如果文件属于已启用审核的库，则为该文件的状态
* 已创建：该项目的创建日期
* 已修改：项目的修改日期
*  owshiddenversion
* 元信息
*  FSObjType
*  FileRef：文件的相对URL，如果它是文档或图片库
* 唯一ID为
*  _等级

==== 文件夹创建

在文档或图片库中创建一个文件夹。

==== 文件夹删除

从文档或图片库中删除文件夹。

==== 文件夹查询

检索符合指定条件的所有文件夹。

除选定的字段外，总是返回以下字段：

*  PermMask
*  _ ModerationStatus：文件如果文件属于已启用审核的库，则为该文件的状态
* 编辑者：用户
* 已创建：该项目的创建日期
* 已修改：项目的修改日期
*  owshiddenversion
* 元信息
*  FSObjType
*  FileLeafRef：文件夹的名称
*  FileRef：文件夹的相对URL
* 唯一ID为
*  _等级
* 的ProgID
*  Last_x0020_Modified
*  Created_x0020_Date

==== 文件添加

将文件添加到文档或图片库。

==== 文件获取内容

检索文件的内容。

==== 文件获取元数据

检索文件的元数据。

==== 文件删除

从文档或图片库中删除文件。

==== 文件签出

从文档库中检出文件。

==== 文件撤消签出

恢复文件的现有结帐。

==== 文件检入

将文件检入文档库。

==== 文件发布

提交文件进行内容审批。

==== 文件取消发布

从内容审批中删除文件或取消发布主要版本。

==== 文件批准

批准提交内容审批的文件。

==== 文件拒绝

拒绝批准提交内容审批的文件。

==== 文件复制到

将文件复制到目标网址。

==== 文件查询

从符合指定条件的文件夹中检索所有文件。

除选定的字段外，总是返回以下字段：

*  PermMask
*  _ ModerationStatus：文件如果文件属于已启用审核的库，则为该文件的状态
* 编辑者：用户
* 已创建：该项目的创建日期
* 已修改：项目的修改日期
*  owshiddenversion
* 元信息
*  FSObjType
*  FileLeafRef：文件夹的名称
*  FileRef：文件夹的相对URL
* 唯一ID为
*  _等级
* 的ProgID
*  Last_x0020_Modified
*  Created_x0020_Date
*  DocIcon

=== 参考对象

如果选择查询返回*SharepointListReference*或*SharepointListMultiValueReference*，则返回的字段值将取决于*Retrieve full objects for reference fields*参数的值：

* 未选中：包含引用对象ID和引用对象列表ID的摘要对象：
+
[source, code, linenums]
----
{
    "Title": "A title",
    "LookupField":
        {
            "id": "1",
            "lookupListName": "aaaa-1111-bbbb-2222"
        },
    "MultiValueLookupField":
        {
            "ids":
                [
                    "1",
                    "2",
                    "3"
                ],
            "lookupListName": "cccc-3333-dddd-4444"
        }
}
----

==== 解决方法

两个摘要对象*SharepointListReference*或*SharepointListMultiValueReference*都提供了一个名为*resolve*的方法。

调用此方法后，它将返回完全引用的对象，并用此已解析的引用替换项目中的摘要对象。

例如，在上述项目的"LookupField"上调用*resolve*方法将返回标题为"aaaa-1111-bbbb-2222"的列表的标识为"1"的项目，并且该项目包含：

[source, code, linenums]
----
{
    "Title": "A title",
    "LookupField":
        {
            "ID": "1",
            "lookupListName": "aaaa-1111-bbbb-2222"
            "Title": "Another title",
            "Property": "A property",
            ...
        },
    "MultiValueLookupField":
        {
            "ids":
                [
                    "1",
                    "2",
                    "3"
                ],
            "lookupListName": "cccc-3333-dddd-4444"
        }
}
----

* 选中：完整的对象图检索。如果有循环，则显示摘要参考对象：
+
[source, code, linenums]
----
"Title": "A title",
    "LookupFieldId":
        {
            "Title": "Another title",
            "Id": "1",
            Property1": "A value",
            ...
        },
    "MultiValueLookupFieldId":
        [
            {
                "Title": "Another title",
                "Id": "1",
                "Property1": "A value",
                ...
            },
            {
                "Title": "Another title",
                "Id": "2",
                "Property1": "A value",
                ...
            }
        ]
}
----
+
*Note*：选中此选项可能会导致包含许多参考字段的大项需要很长时间才能检索。
